Parser_Project/PythonParser.py
# Generated from .\Python.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class PythonParser ( Parser ):

    grammarFileName = "Python.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'endif'", "'print'", "'int'", 
                     "'+'", "'=='", "'='", "'!='", "';'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "IF", "ENDIF", "PRINT", "INT", "PLUS", 
                      "EQUAL", "ASSIGN", "NOTEQUAL", "SEMICOLON", "LPAREN", 
                      "RPAREN", "INTEGER", "NAME", "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_statement = 2
    RULE_ifstmt = 3
    RULE_printstmt = 4
    RULE_assignstmt = 5
    RULE_expression = 6
    RULE_term = 7
    RULE_identifier = 8
    RULE_integer = 9

    ruleNames =  [ "program", "declaration", "statement", "ifstmt", "printstmt", 
                   "assignstmt", "expression", "term", "identifier", "integer" ]

    EOF = Token.EOF
    IF=1
    ENDIF=2
    PRINT=3
    INT=4
    PLUS=5
    EQUAL=6
    ASSIGN=7
    NOTEQUAL=8
    SEMICOLON=9
    LPAREN=10
    RPAREN=11
    INTEGER=12
    NAME=13
    WS=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(PythonParser.DeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PythonParser.INT:
                self.state = 20
                self.declaration()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonParser.IF) | (1 << PythonParser.PRINT) | (1 << PythonParser.NAME))) != 0):
                self.state = 26
                self.statement()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(PythonParser.INT, 0)

        def NAME(self):
            return self.getToken(PythonParser.NAME, 0)

        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = PythonParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(PythonParser.INT)
            self.state = 33
            self.match(PythonParser.NAME)
            self.state = 34
            self.match(PythonParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifstmt(self):
            return self.getTypedRuleContext(PythonParser.IfstmtContext,0)


        def printstmt(self):
            return self.getTypedRuleContext(PythonParser.PrintstmtContext,0)


        def assignstmt(self):
            return self.getTypedRuleContext(PythonParser.AssignstmtContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 39
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonParser.IF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.ifstmt()
                pass
            elif token in [PythonParser.PRINT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.printstmt()
                pass
            elif token in [PythonParser.NAME]:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.assignstmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonParser.IF, 0)

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def identifier(self):
            return self.getTypedRuleContext(PythonParser.IdentifierContext,0)


        def EQUAL(self):
            return self.getToken(PythonParser.EQUAL, 0)

        def integer(self):
            return self.getTypedRuleContext(PythonParser.IntegerContext,0)


        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def ENDIF(self):
            return self.getToken(PythonParser.ENDIF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_ifstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstmt" ):
                listener.enterIfstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstmt" ):
                listener.exitIfstmt(self)




    def ifstmt(self):

        localctx = PythonParser.IfstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(PythonParser.IF)
            self.state = 42
            self.match(PythonParser.LPAREN)
            self.state = 43
            self.identifier()
            self.state = 44
            self.match(PythonParser.EQUAL)
            self.state = 45
            self.integer()
            self.state = 46
            self.match(PythonParser.RPAREN)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonParser.IF) | (1 << PythonParser.PRINT) | (1 << PythonParser.NAME))) != 0):
                self.state = 47
                self.statement()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(PythonParser.ENDIF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(PythonParser.PRINT, 0)

        def term(self):
            return self.getTypedRuleContext(PythonParser.TermContext,0)


        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_printstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintstmt" ):
                listener.enterPrintstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintstmt" ):
                listener.exitPrintstmt(self)




    def printstmt(self):

        localctx = PythonParser.PrintstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(PythonParser.PRINT)
            self.state = 56
            self.term()
            self.state = 57
            self.match(PythonParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PythonParser.NAME, 0)

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(PythonParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(PythonParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_assignstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignstmt" ):
                listener.enterAssignstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignstmt" ):
                listener.exitAssignstmt(self)




    def assignstmt(self):

        localctx = PythonParser.AssignstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(PythonParser.NAME)
            self.state = 60
            self.match(PythonParser.ASSIGN)
            self.state = 61
            self.expression()
            self.state = 62
            self.match(PythonParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.TermContext)
            else:
                return self.getTypedRuleContext(PythonParser.TermContext,i)


        def PLUS(self):
            return self.getToken(PythonParser.PLUS, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = PythonParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expression)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.term()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.term()
                self.state = 66
                self.match(PythonParser.PLUS)
                self.state = 67
                self.term()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(PythonParser.IdentifierContext,0)


        def integer(self):
            return self.getTypedRuleContext(PythonParser.IntegerContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)




    def term(self):

        localctx = PythonParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonParser.NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.identifier()
                pass
            elif token in [PythonParser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.integer()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PythonParser.NAME, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = PythonParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(PythonParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(PythonParser.INTEGER, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)




    def integer(self):

        localctx = PythonParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_integer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(PythonParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





